Thu Sep 11 05:00:04 UTC 2008  James H. Hill  <hillj@isis.vanderbilt.edu>

        * cuts/java/cuts.java.build:

          . Add the cuts/UUID.idl and cuts/TimeValue.idl to the default
            build of CUTS for Java. This means JacORB is required to build
            the CUTS runtime architecture for Java.

        * cuts/utils/logging/TestLogger_i.cpp:
        * cuts/workers/Test_Logger/CUTS/Logger.java:
        * cuts/workers/Test_Logger/TestLogger.build:

          . Update the Java-based logger to be compliant with the latest
            version of the logging client.

          . Bug fix where the timestamp of the message was not mapping
            correctly into the CORBA (non-Java world) when using
            milliseconds.

Wed Sep 10 03:30:31 UTC 2008  James H. Hill  <hillj@isis.vanderbilt.edu>

        * contrib/java/commons-codec-1.3.jar:
        * contrib/java/commons-httpclient-3.1.jar:
        * contrib/java/commons-io-1.4.jar:
        * contrib/java/groovy-all-1.5.5.jar:
        * contrib/java/htmlunit-2.1.jar:
        * contrib/java/js-1.7R1.jar:

          . Introduced FireAnt and its dependencies.

Wed Sep 10 03:26:24 UTC 2008  James H. Hill  <hillj@isis.vanderbilt.edu>

        * cuts/utils/common/Property_Parser.h:

          . Bug fix where the internal class was not exported from the
            library.

        * cuts/utils/template/Template_App.cpp:
        * cuts/utils/template/Template_App_Options.h:

          . Enabled support for defining properties at the command-line
            using the -D option.

Wed Sep 10 03:14:37 UTC 2008  James H. Hill  <hillj@isis.vanderbilt.edu>

        * bin/jbi/ExecutionManager.bat:
        * bin/jbi/ExecutionManager.sh:
        * bin/jbi/NameService.sh:
        * bin/jbi/NodeManager.bat:
        * bin/jbi/NodeManager.sh:
        * bin/jbi/PlanLauncher.bat:
        * bin/jbi/PlanLauncher.sh:
        * bin/jbi/RegisterMioType.sh:
        * bin/jbi/SingleProcess.bat:
        * bin/jbi/SingleProcess.sh: