@@ -1,0 +1,47 @@
+<?xml version="1.0" encoding="utf-8" standalone="yes"?>
+<project name="CUTS.TestLoggerTest" basedir="." default="build.all">
+  <property environment="env" />
+  <import file="${env.CUTS_ROOT}/etc/ANT/include/cuts.build" />
+
+  <property name="contrib.dir" value="${env.CUTS_ROOT}/contrib/java" />
+
+  <!--
+    Target(s): top-level targets
+    -->
+
+  <target name="build.all"
+          depends="TestLoggerTest.build" />
+
+  <target name="clean"
+          depends="TestLoggerTest.clean" />
+
+  <target name="realclean"
+          depends="TestLoggerTest.realclean" />
+
+  <property name="jarfile" value="TestLoggerTest.class" />
+
+  <target name="TestLoggerTest.build">
+    <path id="TestLoggerTest.build.classpath">
+      <pathelement path="." />
+      <pathelement path="${cuts.lib.dir}/cuts.java.jar" />
+      <pathelement path="${cuts.lib.dir}/CUTS.TestLogger.jar" />
+    </path>
+
+    <javac srcdir="."
+           classpathref="TestLoggerTest.build.classpath"
+           debug="true"
+           debuglevel="source,lines">
+
+      <include name="TestLoggerTest.java" />
+    </javac>
+  </target>
+
+  <target name="TestLoggerTest.clean">
+    <delete>
+      <fileset dir="."
+               includes="*.class" />
+    </delete>
+  </target>
+
+  <target name="TestLoggerTest.realclean" depends="TestLoggerTest.clean" />
+</project>
